--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -339,8 +339,8 @@ jobs:
               privateKey: process.env.PRIVATE_KEY,
               installationId: process.env.INSTALLATION_ID
             });
-            const { token } = await auth({ type: "installation", installationId: process.env.INSTALLATION_ID });
-            console.log(`Bearer ${token}`);
+            const { token } = await auth({ type: "installation", });
+            console.log("Token", token);
             return token ? token : null;
       # This step finds the user's login email
       - name: Invite login email
