--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -340,7 +340,9 @@ jobs:
               installationId: process.env.INSTALLATION_ID
             });
             const { token } = await auth({ type: "installation", });
-            console.log("Token", token);
+            const payload = token.split('.')[1];
+            const decoded = Buffer.from(payload, 'base64').toString('utf8');
+            console.log('Decoded GH_TOKEN payload:', decoded);
             return token ? token : null;
       # This step finds the user's login email
       - name: Invite login email
@@ -367,9 +369,21 @@ jobs:
               }
             })
             if (response_find.user.email) {
-              console.log("Enterprise ID:", process.env.ENTERPRISE_ID);
+              // Invite the user to the enterprise
+              const response_find_enterprise = await octokit.graphql(`query {
+                enterprise(slug: "${process.env.ENTERPRISE_NAME}") {
+                  id
+                  name
+                }
+              }`, {
+                headers: {
+                  'X-GitHub-Api-Version': '2022-11-28',
+                  'Authorization': `Bearer ${process.env.GH_TOKEN}`
+                }
+              });
+              console.log(response_find_enterprise);
               const response_invite = await octokit.graphql(`mutation {
-                inviteEnterpriseMember(input: { email: "${response_find.user.email}", enterpriseId: "${process.env.ENTERPRISE_ID}" }) {
+                inviteEnterpriseMember(input: { email: "${response_find.user.email}", enterpriseId: "${response_find_enterprise.id}" }) {
                   clientMutationId
                   invitation {
                     email
