--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -352,61 +352,63 @@ jobs:
           script: |
             const { Octokit } = require("@octokit/action");
             const token = process.env.GH_TOKEN;
-            if (!token) {
-              console.log("No GH_TOKEN found.");
-              return;
-            }
-            const payload = token.split('.')[1];
-            const decoded = Buffer.from(payload, 'base64').toString('utf8');
-            console.log('Decoded GH_TOKEN payload:', decoded);
-            const octokit = new Octokit();
-            const response_find = await octokit.graphql(`query {
-              user(login: "${context.payload.sender.login}") {
-                email
-                id
-                login
-              }
-            }`, {
-              headers: {
-                'X-GitHub-Api-Version': '2022-11-28',
-                'Authorization': `Bearer ${process.env.GH_TOKEN}`
-              }
-            })
-            if (response_find.user.email) {
-              // Invite the user to the enterprise
-              const response_find_enterprise = await octokit.graphql(`query {
-                enterprise(slug: "${process.env.ENTERPRISE_NAME}") {
+            if (token) {
+              const payload = token.split('.')[1];
+              const decoded = Buffer.from(payload, 'base64').toString('utf8');
+              console.log('Decoded GH_TOKEN payload:', decoded);
+              const octokit = new Octokit();
+              const response_find = await octokit.graphql(`query {
+                user(login: "${context.payload.sender.login}") {
+                  email
                   id
-                  name
+                  login
                 }
               }`, {
                 headers: {
                   'X-GitHub-Api-Version': '2022-11-28',
                   'Authorization': `Bearer ${process.env.GH_TOKEN}`
                 }
-              });
-              console.log(response_find_enterprise);
-              const response_invite = await octokit.graphql(`mutation {
-                inviteEnterpriseMember(input: { email: "${response_find.user.email}", enterpriseId: "${response_find_enterprise.id}" }) {
-                  clientMutationId
-                  invitation {
-                    email
-                    invitee {
-                      login
-                      id
+              })
+              if (response_find.user.email) {
+                // Invite the user to the enterprise
+                const response_find_enterprise = await octokit.graphql(`query {
+                  enterprise(slug: "${process.env.ENTERPRISE_NAME}") {
+                    id
+                    name
+                  }
+                }`, {
+                  headers: {
+                    'X-GitHub-Api-Version': '2022-11-28',
+                    'Authorization': `Bearer ${process.env.GH_TOKEN}`
+                  }
+                });
+                console.log(response_find_enterprise);
+                const response_invite = await octokit.graphql(`mutation {
+                  inviteEnterpriseMember(input: { email: "${response_find.user.email}", enterpriseId: "${response_find_enterprise.id}" }) {
+                    clientMutationId
+                    invitation {
+                      email
+                      invitee {
+                        login
+                        id
+                      }
                     }
                   }
-                }
-              }`, {
-                headers: {
-                  'X-GitHub-Api-Version': '2022-11-28',
-                  'Authorization': `Bearer ${process.env.GH_TOKEN}`
-                }
-              });
+                }`, {
+                  headers: {
+                    'X-GitHub-Api-Version': '2022-11-28',
+                    'Authorization': `Bearer ${process.env.GH_TOKEN}`
+                  }
+                });
 
-              return response_invite.status >= 200 && response_invite.status < 300 ? 'success' : 'failure';
+                return response_invite.status >= 200 && response_invite.status < 300 ? 'success' : 'failure';
+              }
+              else {
+                return 'failure';
+              }
             }
             else {
+              console.error('GH_TOKEN is not defined');
               return 'failure';
             }
       # If the previous step was successful, this step comments on the issue and closes it
