--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -144,29 +144,22 @@ jobs:
             const installation = installations.find(i => i.account.slug === process.env.ENTERPRISE_NAME); // or match by account.id, etc.
             console.log(installation);
             return installation ? installation.id : null;
-      - name: Get OAuth Token
-        id: get-oauth-token
+      - name: Get Installation Token
+        id: get-installation-token
         uses: actions/github-script@v7
         env:
           APP_ID: ${{ secrets.APPLICATION_ID }}
           PRIVATE_KEY: ${{ secrets.APPLICATION_PRIVATE_KEY }}
-          ORGANIZATION_NAME: ${{ secrets.ORGANIZATION_NAME }}
-          ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
-          CLIENT_ID: ${{ secrets.CLIENT_ID }}
-          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
           INSTALLATION_ID: ${{ steps.generate-token.outputs.result }}
         with:
           script: |
             const { createAppAuth } = require("@octokit/auth-app");
-            console.log(process.env.INSTALLATION_ID);
             const auth = createAppAuth({
               appId: process.env.APP_ID,
               privateKey: process.env.PRIVATE_KEY,
-              clientId: process.env.CLIENT_ID,
-              clientSecret: process.env.CLIENT_SECRET
+              installationId: process.env.INSTALLATION_ID
             });
-            const { token } = await auth({ type: "oauth-app"});
-            console.log(`Bearer ${token}`);
+            const { token } = await auth({ type: "installation" });
             return token ? token : null;
       # This step finds the user's login email
       - name: Invite login email
@@ -174,7 +167,7 @@ jobs:
         continue-on-error: true
         uses: actions/github-script@v7
         env:
-          GH_TOKEN: ${{ steps.get-oauth-token.outputs.result }}
+          GH_TOKEN: ${{ steps.get-installation-token.outputs.result }}
         with:
           script: |
             const { Octokit } = require("@octokit/action");
@@ -319,8 +312,8 @@ jobs:
             const installation = installations.find(i => i.target_type === "Enterprise" && i.account.slug === process.env.ENTERPRISE_NAME); // or match by account.id, etc.
             console.log(installation);
             return installation ? installation.id : null;
-      - name: Get Token
-        id: get-token
+      - name: Get Installation Token
+        id: get-installation-token
         uses: actions/github-script@v7
         env:
           APP_ID: ${{ secrets.APPLICATION_ID }}
@@ -339,7 +332,7 @@ jobs:
               privateKey: process.env.PRIVATE_KEY,
               installationId: process.env.INSTALLATION_ID
             });
-            const { token } = await auth({ type: "installation", });
+            const { token } = await auth({ type: "installation" });
             return token ? token : null;
       # This step finds the user's login email
       - name: Invite login email
@@ -347,7 +340,7 @@ jobs:
         continue-on-error: true
         uses: actions/github-script@v7
         env:
-          GH_TOKEN: ${{ steps.get-token.outputs.result }}
+          GH_TOKEN: ${{ steps.get-installation-token.outputs.result }}
         with:
           script: |
             const { Octokit } = require("@octokit/action");
