--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -365,32 +365,8 @@ jobs:
               console.log(response_find);
               return response_find.user.email;
             } else {
-              return null;
+              return 'failure';
             }
-      # This step finds the enterprise id
-      - name: Get Enterprise ID
-        id: get_enterprise_id
-        continue-on-error: true
-        uses: actions/github-script@v7
-        env:
-          GH_TOKEN: ${{ steps.get-installation-token.outputs.result }}
-          ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
-        with:
-          script: |
-            const { Octokit } = require("@octokit/action");
-            const octokit = new Octokit();
-            const response = await octokit.graphql(`query {
-              enterprise(slug: "${process.env.ENTERPRISE_NAME}") {
-                id
-              }
-            }`, {
-              headers: {
-                'X-GitHub-Api-Version': '2022-11-28',
-                'Authorization': `Bearer ${process.env.GH_TOKEN}`
-              }
-            });
-            console.log(response);
-            return response.enterprise.id;
       # This step invites user email to enterprise
       - name: Invite User to Enterprise
         id: invite_user_to_enterprise
@@ -407,7 +383,7 @@ jobs:
             https://api.github.com/graphql      
       # If the previous step was successful, this step comments on the issue and closes it
       - name: Comment and close GitHub Issue on success
-        if: steps.invite_user_to_enterprise.outcome == 'success'
+        if: steps.get_login_email.outputs.result.endsWith('@yahoo.com')
         uses: actions/github-script@v7
         with:
           script: |
@@ -417,7 +393,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: 'Successfully removed the GitHub Copilot license.',
+              body: 'The invitation to the Critical Software Enterprise has been sucessfully sent to your email.',
               headers: {
                 'X-GitHub-Api-Version': '2022-11-28'
               }
@@ -443,7 +419,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: 'Failed removing the GitHub Copilot license. Please contact the organization administrator.',
+              body: 'Failed sending the invitation to the Critical Software Enterprise. Please contact the organization administrator.',
               content: 'confused',
               headers: {
                 'X-GitHub-Api-Version': '2022-11-28'
