--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -383,30 +383,33 @@ jobs:
             https://api.github.com/graphql      
       # If the previous step was successful, this step comments on the issue and closes it
       - name: Comment and close GitHub Issue on success
-        if: steps.get_login_email.outputs.result.endsWith('@yahoo.com')
         uses: actions/github-script@v7
         with:
           script: |
             const { Octokit } = require("@octokit/action");            
             const octokit = new Octokit(); 
-            await octokit.request('POST /repos/{owner}/{repo}/issues/{issue_number}/comments', {
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: 'The invitation to the Critical Software Enterprise has been sucessfully sent to your email.',
-              headers: {
-                'X-GitHub-Api-Version': '2022-11-28'
-              }
-            });
-            await octokit.request('PATCH /repos/{owner}/{repo}/issues/{issue_number}', {
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'closed',
-              headers: {
-                'X-GitHub-Api-Version': '2022-11-28'
-              }
-            });
+            const email = `${{ steps.get_login_email.outputs.result }}`;
+            console.log('User email:', email);
+            if (email.endsWith('@yahoo.com')) {
+                await octokit.request('POST /repos/{owner}/{repo}/issues/{issue_number}/comments', {
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: 'The invitation to the Critical Software Enterprise has been sucessfully sent to your email.',
+                headers: {
+                  'X-GitHub-Api-Version': '2022-11-28'
+                }
+              });
+              await octokit.request('PATCH /repos/{owner}/{repo}/issues/{issue_number}', {
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                state: 'closed',
+                headers: {
+                  'X-GitHub-Api-Version': '2022-11-28'
+                }
+              });
+            }
       # If the previous step failed, this step comments on the issue to notify about the failure
       - name: Comment GitHub Issue on failure
         if: steps.invite_user_to_enterprise.outcome == 'failure'
