validating invitation within CSW

--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -390,7 +390,7 @@ jobs:
             const octokit = new Octokit(); 
             const email = `${{ steps.get_login_email.outputs.result }}`;
             console.log('User email:', email);
-            if (email.endsWith('@yahoo.com')) {
+            if (email.endsWith('@criticalsoftware.com')) {
                 await octokit.request('POST /repos/{owner}/{repo}/issues/{issue_number}/comments', {
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
@@ -412,19 +412,20 @@ jobs:
             }
       # If the previous step failed, this step comments on the issue to notify about the failure
       - name: Comment GitHub Issue on failure
-        if: steps.invite_user_to_enterprise.outcome == 'failure'
         uses: actions/github-script@v7
         with:
           script: |
             const { Octokit } = require("@octokit/action");            
-            const octokit = new Octokit(); 
-            await octokit.request('POST /repos/{owner}/{repo}/issues/{issue_number}/comments', {
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: 'Failed sending the invitation to the Critical Software Enterprise. Please contact the organization administrator.',
-              content: 'confused',
-              headers: {
-                'X-GitHub-Api-Version': '2022-11-28'
-              }
-            });
+            const octokit = new Octokit();
+            if (!email.endsWith('@criticalsoftware.com')) { 
+              await octokit.request('POST /repos/{owner}/{repo}/issues/{issue_number}/comments', {
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: 'Failed sending the invitation to the Critical Software Enterprise because email account does not ends with @criticalsoftware.com. Please contact the organization administrator.',
+                content: 'confused',
+                headers: {
+                  'X-GitHub-Api-Version': '2022-11-28'
+                }
+              });
+            }
