--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -26,28 +26,41 @@ jobs:
           node-version: 20
       # This step installs the @octokit/action npm package
       - run: npm install @octokit/action
-      # This step gets a GitHub App installation access token
-      - name: Get Token
-        id: get_workflow_token
-        uses: peter-murray/workflow-application-token-action@v3
+      # This step gets the installation token
+      - name: Get Installation Token
+        id: get-installation-token
+        uses: actions/github-script@v7
+        env:
+          APP_ID: ${{ secrets.APPLICATION_ID }}
+          PRIVATE_KEY: ${{ secrets.APPLICATION_PRIVATE_KEY }}
+          INSTALLATION_ID: ${{ steps.generate-token.outputs.result }}
         with:
-          application_id: ${{ secrets.APPLICATION_ID }}
-          application_private_key: ${{ secrets.APPLICATION_PRIVATE_KEY }}
+          script: |
+            const { createAppAuth } = require("@octokit/auth-app");
+            console.log(process.env.INSTALLATION_ID);
+            const auth = createAppAuth({
+              appId: process.env.APP_ID,
+              privateKey: process.env.PRIVATE_KEY,
+              installationId: process.env.INSTALLATION_ID
+            });
+            const { token } = await auth({ type: "installation" });
+            return token ? token : null;
       # This step assigns a GitHub Copilot license to the user who created the issue
       - name: Assign GitHub Copilot license
         id: assign_license
         continue-on-error: true
         uses: actions/github-script@v7
         env:
-          GITHUB_TOKEN: ${{ steps.get_workflow_token.outputs.token }} 
-          ENTERPRISE_ID: ${{ secrets.ENTERPRISE_ID }}
+          GITHUB_TOKEN: ${{ steps.get-installation-token.outputs.result }}
           ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
         with:
           script: |
             const { Octokit } = require("@octokit/action");            
             const octokit = new Octokit();            
-            const response = await octokit.request('POST /enterprises/{org}/copilot/billing/selected_users', {
-              org: process.env.ENTERPRISE_NAME,
+            const response = await octokit.request('POST /enterprises/{enterprise}/copilot/selected_users', {
+              enterprise: process.env.ENTERPRISE_NAME,
+              team_slug: 'Internal',
+              role: 'member',
               selected_usernames: [context.payload.sender.login],
               headers: {
                 'X-GitHub-Api-Version': '2022-11-28'
