--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -80,33 +80,34 @@ jobs:
       # This step assigns a GitHub Copilot license to the user who created the issue
       - name: Assign GitHub Copilot license
         id: assign_license
+        continue-on-error: true
+        uses: actions/github-script@v7
         env:
           GITHUB_TOKEN: ${{ steps.get-installation-token.outputs.result }}
           ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
-          LOGIN: ${{ github.event.sender.login }}
-        run: |
-          RESPONSE=$(curl -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer $GITHUB_TOKEN" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            -H "Content-Type: application/json" \
-            https://api.github.com/enterprises/${{ secrets.ENTERPRISE_NAME }}/copilot/selected_users \
-            -d '{
-              "team_slug": "Internal",
-              "role": "member",
-              "selected_usernames": ["'"$LOGIN"'"]
-            }')
-          echo "Response: $RESPONSE"
-          echo "result=$RESPONSE" >> $GITHUB_OUTPUT
+        with:
+          script: |
+            const { Octokit } = require("@octokit/action");            
+            const octokit = new Octokit();   
+            console.log(context.payload.sender.login)         
+            const response = await octokit.request('POST /enterprises/{enterprise}/copilot/selected_users', {
+              enterprise: process.env.ENTERPRISE_NAME,
+              team_slug: 'Internal',
+              role: 'member',
+              selected_usernames: [context.payload.sender.login],
+              headers: {
+                'X-GitHub-Api-Version': '2022-11-28'
+              }
+            })
+            return response.status >= 200 && response.status < 300 ? 'success' : 'failure'
       # If the previous step was successful, this step comments on the issue and closes it
       - name: Comment and close GitHub Issue on success
+        if: steps.assign_license.outcome == 'success'
         uses: actions/github-script@v7
         with:
           script: |
             const { Octokit } = require("@octokit/action");            
             const octokit = new Octokit(); 
-            const result = ${{ steps.assign_license.outputs.result }}
-            console.log("Result: ", result)
             await octokit.request('POST /repos/{owner}/{repo}/issues/{issue_number}/comments', {
               issue_number: context.issue.number,
               owner: context.repo.owner,
@@ -121,6 +122,24 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               state: 'closed',
+              headers: {
+                'X-GitHub-Api-Version': '2022-11-28'
+              }
+            });
+      # If the previous step failed, this step comments on the issue to notify about the failure
+      - name: Comment GitHub Issue on failure
+        if: steps.assign_license.outcome == 'failure'        
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { Octokit } = require("@octokit/action");            
+            const octokit = new Octokit(); 
+            await octokit.request('POST /repos/{owner}/{repo}/issues/{issue_number}/comments', {
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: 'Failed assigning the GitHub Copilot license. Please contact the organization administrator.',
+              content: 'confused',
               headers: {
                 'X-GitHub-Api-Version': '2022-11-28'
               }
