--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -89,14 +89,15 @@ jobs:
           script: |
             const { Octokit } = require("@octokit/action");            
             const octokit = new Octokit();   
-            console.log(context.payload.sender.login)         
+            console.log(context.payload.sender.login)
             const response = await octokit.request('POST /enterprises/{enterprise}/copilot/selected_users', {
               enterprise: process.env.ENTERPRISE_NAME,
               team_slug: 'Internal',
               role: 'member',
               selected_usernames: [context.payload.sender.login],
               headers: {
-                'X-GitHub-Api-Version': '2022-11-28'
+                'X-GitHub-Api-Version': '2022-11-28',
+                'Authorization': `Bearer ${process.env.GITHUB_TOKEN}`
               }
             })
             return response.status >= 200 && response.status < 300 ? 'success' : 'failure'
